added Java Gateway to zabbix proxy

--- a/templates/default/zabbix_proxy.conf.erb
+++ b/templates/default/zabbix_proxy.conf.erb
@@ -402,6 +402,11 @@ ConfigFrequency=<%= node['zabbix']['proxy']['config']['ConfigFrequency'] %>
 # Default:
 # TmpDir=/tmp
 
+
+JavaGateway=<%= @java_gateway %>
+JavaGatewayPort=<%= @java_gateway_port %>
+StartJavaPollers=<%= @java_pollers %>
+
 ### Option: Include
 #	You may include individual files or all files in a directory in the configuration file.
 #
