--- a/templates/default/zabbix_proxy.conf.erb
+++ b/templates/default/zabbix_proxy.conf.erb
@@ -265,6 +265,7 @@ StartPingers=<%= @start_pingers %>
 # Range: 0-250
 # Default:
 # StartDiscoverers=1
+StartDiscoverers=<%= node['zabbix']['proxy']['start_discoverers']%>
 
 ### Option: ListenIP
 #	List of comma delimited IP addresses that the trapper should listen on.
