Extending zabbix agent settings

--- a/templates/default/user_params.conf.erb
+++ b/templates/default/user_params.conf.erb
@@ -1,6 +1,14 @@
 # The first rule of this file is: Do not edit.
 # The second rule of this file is: Do not edit.
 # Created by chef
+<% if node['zabbix']['agent']['unsafe_user_parameters'] -%>
 <% node['zabbix']['agent']['user_parameter'].each do |user_parameter| -%>
 UserParameter=<%= user_parameter %>
+<% end -%>
+<% end -%>
+
+<% if node['zabbix']['agent']['unsafe_user_parameter'] -%>
+<% node['zabbix']['agent']['unsafe_user_parameter'].each do |user_parameter| -%>
+UnsafeUserParameters=<%= user_parameter %>
+<% end -%>
 <% end -%>
