--- a/templates/default/zabbix_nginx.erb
+++ b/templates/default/zabbix_nginx.erb
@@ -17,7 +17,7 @@ server {
     ssl_certificate <%= node['zabbix']['web']['cert'] %>;
     ssl_certificate_key <%= node['zabbix']['web']['key'] %>;
     ssl_prefer_server_ciphers       on;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols <%= @ssl_protocols %>;
 <% end %>
 
   access_log /var/log/nginx/zabbix.access.log;
