--- a/templates/default/zabbix_agentd.conf.erb
+++ b/templates/default/zabbix_agentd.conf.erb
@@ -16,8 +16,8 @@ LogRemoteCommands=1
 <% if node['zabbix']['agent']['pid_file'] -%>
 PidFile=<%= node['zabbix']['agent']['pid_file'] %>
 <% end -%>
-<% if node.zabbix.agent.servers_active.first -%>
-ServerActive=<%= node.zabbix.agent.servers_active.join(',') %>
+<% if node['zabbix']['agent']['servers_active'].first -%>
+ServerActive=<%= node['zabbix']['agent']['servers_active'].join(',') %>
 <% end -%>
 <% if node['zabbix']['agent']['start_agents'] -%>
 StartAgents=<%= node['zabbix']['agent']['start_agents'] %>
