--- a/templates/default/zabbix_java_proxy.init.erb
+++ b/templates/default/zabbix_java_proxy.init.erb
@@ -5,8 +5,8 @@
 
 NAME=zabbix_java_proxy
 DESC="Zabbix java proxy daemon"
-DIR=<%= node.zabbix.run_dir %>
-PID=<%= node.zabbix.run_dir %>/$NAME.pid
+DIR=<%= node['zabbix']['run_dir'] %>
+PID=<%= node['zabbix']['run_dir'] %>/$NAME.pid
 
 test -f $DAEMON || exit 0
 
@@ -16,11 +16,11 @@ chown -R zabbix:zabbix "$DIR"
 case "$1" in
   start)
         echo "Starting $DESC: $NAME"
-		(cd <%= node.zabbix.install_dir %>/sbin/zabbix_java && ./startup.sh)
+		(cd <%= node['zabbix']['install_dir'] %>/sbin/zabbix_java && ./startup.sh)
         ;;
   stop)
         echo "Stopping $DESC: $NAME"
-		(cd <%= node.zabbix.install_dir %>/sbin/zabbix_java && ./shutdown.sh)
+		(cd <%= node['zabbix']['install_dir'] %>/sbin/zabbix_java && ./shutdown.sh)
         ;;
   restart|force-reload)
         $0 stop
